--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
