--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,48 @@ services:
   mysql:
     image: mysql
     container_name: mysql
-    ports:
-      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: expense_tracker
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
       - mysql-data:/var/lib/mysql
+    networks:
+      - private_net
+
+  api:
+    build: 
+      context: "./api"
+    container_name: api
+    ports:
+      - "3001:3000"
+    depends_on:
+      - mysql
+    environment:
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USERNAME=root
+      - DB_PASSWORD=password
+      - DB_NAME=expense_tracker
+      - ALLOWED_ORIGINS=http://localhost:3000
+
+    restart: always
+    networks:
+      - private_net
+  web:
+    build: 
+      context: ./web
+      args:
+        - API_BASE_URL=http://localhost:3001
+    depends_on:
+      - api
+    restart:
+      always
+    ports:
+      - 3000:80
 
 volumes:
   mysql-data:
+networks:
+  private_net:
